--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -12,9 +12,9 @@
             <thead>
                 <tr>
                     <th>no.</th>
-                    <th>Image</th>
-                    <th>name</th>
-                    <th>Price</th>
+                    <th>画像</th>
+                    <th>名前</th>
+                    <th>金額</th>
                     <th>個数</th>
                     <th>小計</th>
                 </tr>
@@ -82,7 +82,8 @@
                     <input type="text" name="phone" id="" class="form-control" placeholder="" aria-describedby="helpId">
                   </div>
 
-                  <input type="submit" class="btn float-right btn-outline-success col-lg-6" value="Check out">
+                  <input type="submit" class="btn float-right btn-outline-success col-lg-6" value="お支払い" >
+                  <a href="https://buy.stripe.com/test_28ocPZ64A3LegZacMM"></a>
             </form>
           </div>
         </div>
