--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -14,7 +14,8 @@
 
   <style>
     nav{
-      background-color: lime;
+      background-color: #a3ffa3;
+      color : #a3ffa3,
     }
     .one-edge-shadow {
               box-shadow: 0 8px 2px -5px rgb(246, 245, 245);
@@ -22,7 +23,7 @@
 .display-8{
   font-weight: 200;
   font-size: 30px;
-  font-colour: $teal-200;
+  font-color: $green-200;
 }
   </style>
 </head>
