--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -57,7 +57,7 @@
 							{% csrf_token %}
 							<input hidden type="text" name='product' value='{{product.id}}'>
 							<input type="submit" class="float-right btn btn-success form-control"
-								value="Add To Cart">
+								value="カートに入れる">
 						</form>
 						{% endif %}
 
