--- a/store/templates/cart.html
+++ b/store/templates/cart.html
@@ -15,8 +15,7 @@
                     <th>画像</th>
                     <th>名前</th>
                     <th>金額</th>
-                    <th>個数</th>
-                    <th>小計</th>
+                    
                 </tr>
             </thead>
             <tbody>
@@ -28,69 +27,24 @@
                     <td>{{product.name}}</td>
                     <td>{{product.price|currency}}</td>
                     
-                    <td>{{product|cart_quantity:request.session.cart}}</td>
-                    <td>{{product|price_total:request.session.cart|currency}}</td>
+                    
                 </tr>
 
                 {% endfor %}
                
             </tbody>
 
-            <tfoot>
-                <tr>
-                    <th colspan="4"></th>
-                    <th class="" colspan="">合計</th>
-                    <th>{{products|total_cart_price:request.session.cart|currency}}</th>
-                </tr>
-            </tfoot>
+            
         </table>
         <hr>
         <div class="m-3 p-3">
-            <a href="#" data-toggle="modal" data-target="#exampleModal" class="btn btn-outline-success border rounded  col-lg-3 float-right">お支払い</a>
+            <a href="https://buy.stripe.com/test_fZe6rB0Kg5Tm10c145" class="btn btn-outline-success border rounded  col-lg-3 float-right">お支払い</a>
             
         </div>
    </div>
 </div>
 
 
-<!-- modal -->
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">
-              お支払い
-          </h5>
-          <hr>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="m-2 p-3">
-            <form action="/check-out" method="POST">
-                {% csrf_token %}
-                <div class="form-group">
-                  <label for="">追加して欲しい機能</label>
-                  <input type="text" name="address" id="" class="form-control" placeholder="" aria-describedby="helpId">
-                  
-                </div>
-                <div class="form-group">
-                    <label for="">その他要望</label>
-                    <input type="text" name="phone" id="" class="form-control" placeholder="" aria-describedby="helpId">
-                  </div>
-
-                  <input type="submit" class="btn float-right btn-outline-success col-lg-6" value="お支払い" >
-                  <a href="https://buy.stripe.com/test_28ocPZ64A3LegZacMM"></a>
-            </form>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-  </div>
 
 
 
